--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "node-schedule": "1.3.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
