--- a/Webpack/package.json
+++ b/Webpack/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "0.21.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
